Apply styling to comment section and fix responsivity issues with flew wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,6 +227,7 @@ body {
     border-radius: 25px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     color: #2C3033;
 }
 
@@ -239,6 +240,14 @@ body {
 .comment{
     margin-bottom: 10px;
     border-bottom: #ABAFB1 1px solid;
+}
+
+.comment-box{
+    padding: 20px;
+}
+
+.comment-box > h3, .comment-path > h3{
+    font-size: 1.5rem;
 }
 
 /* Login authentication */
